--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,8 +14,8 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.9.x
           lhci autorun
-      - run: mkdir -p /home/runner/work/newRepo1/newRepo1/reports
+      - run: mkdir -p /home/runner/work/newRepo1/newRepo1/
       - uses: actions/upload-artifact@v3
         with:
-          name: my-artifact
+          name: lhci-reports
           path: /home/runner/work/newRepo1/newRepo1/lhci
